Subida de archivos

--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,7 @@
       <meta name="google-signin-client_id" content="793030895504-chbtptgrpkrv87rlbn5cfcu9o3b5ti5v.apps.googleusercontent.com">
    </head>
    <body>
+      <!-- <img src="http://localhost:3000/imagen/usuarios/5c5f7a6ec7ef6dcd99c305a2-624.png?token=eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJ1c3VhcmlvIjp7InJvbGUiOiJBRE1JTl9ST0xFIiwiZXN0YWRvIjp0cnVlLCJnb29nbGUiOmZhbHNlLCJfaWQiOiI1YzVmN2E2ZWM3ZWY2ZGNkOTljMzA1YTIiLCJub21icmUiOiJhZG1pbiIsImVtYWlsIjoiYWRtaW5AZ21haWwuY29tIiwiX192IjowLCJpbWciOiI1YzVmN2E2ZWM3ZWY2ZGNkOTljMzA1YTItNjI0LnBuZyJ9LCJpYXQiOjE1NTMwNTA4NzksImV4cCI6MTU1MzIyMzY3OX0.wh4m7kdNJHaQ0jHaVzbfmOMTLtWHIlmkmXu1hscxmDw"> -->
       <div class="g-signin2" data-onsuccess="onSignIn"></div>
       <a href="#" onclick="signOut();">Sign out</a>
       <script>
